Bug 67919 - AXMenuButton's should implement AXShowMenu
Summary: AXMenuButton's should implement AXShowMenu
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:25.2.0 target:24.8.0.2
Keywords: accessibility
Depends on:
Blocks: a11y-macOS
  Show dependency treegraph
 
Reported: 2013-08-08 20:08 UTC by Boris Dušek
Modified: 2024-07-25 15:35 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screencast for discussion on https://gerrit.libreoffice.org/c/core/+/170426 (PS3) (3.82 MB, video/x-matroska)
2024-07-15 10:08 UTC, Michael Weghorn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Boris Dušek 2013-08-08 20:08:46 UTC
Overview:
Currently it's impossible to show menu of AXMenuButtons with VoiceOver.

Steps to reproduce:
1. Find some enabled AXMenuButton - e.g. the "New" button in Writer toolbar (usually top-most left-most button in the toolbar area)
2. Move VoiceOver cursor to it (e.g. by turning VoiceOver on by Cmd-F5 and then pressing F6 once to land on "New selected menu button"
3. Try showing the button's menu (as opposed to pressing it)

Actual results:
There is no way, VO-Shift-M does nothing, VO-Space presses the button

Expected results:
There is a way - VO-Shift-M shows the button menu as opposed to pressing the button with VO-Space

Regression:
Tested on OS X 10.8.4 with LibreOffice master (39a78087890fb9255a5e47220bac6cfb956fcfe0)

Notes:
Implementing the AXShowMenu action to show the menu it the way to go.
Comment 1 Alex Thurgood 2014-12-01 14:45:42 UTC
This works for me with Ctrl-Down arrow on OSX 10.10.1 and LO 4341
Comment 2 Boris Dušek 2014-12-03 19:45:04 UTC
(In reply to Alex Thurgood from comment #1)
> This works for me with Ctrl-Down arrow on OSX 10.10.1 and LO 4341

Ctrl-Down is not the way VoiceOver user is supposed to invoke context menu. The way to do that is VO-Shift-M (which invokes AXShowMenu action). Besides VoiceOver, AXShowMenu action can be used also by UI testing/automation tools.

My wording in original bug report was a bit improper as it may have implied that if there is *any* way to show the context menu (like Ctrl-down arrow), the bug should be closed. What I really meant is that AXShowMenu should be implemented so that the user interface works for VoiceOver user the way they are supposed (and used to) to use it.

So until AXShowMenu action is implemented and VO-Shift-M works with VoiceOver, this bug has to be kept open.
Comment 3 Alex Thurgood 2014-12-05 14:32:57 UTC
Reopened is for bugs that are allegedly fixed by known code changes which don't work, so setting this to new instead.
Comment 4 Robinson Tryon (qubit) 2015-12-10 03:37:49 UTC Comment hidden (noise)
Comment 5 QA Administrators 2017-01-03 19:40:07 UTC Comment hidden (noise)
Comment 6 Boris Dušek 2017-01-03 19:53:02 UTC
Still reproducible with:

macOS 10.12.2
LibreOffice 5.2.4
Comment 7 QA Administrators 2018-01-04 03:35:30 UTC Comment hidden (noise)
Comment 8 QA Administrators 2020-01-23 04:17:40 UTC Comment hidden (noise)
Comment 9 QA Administrators 2022-01-23 03:42:50 UTC Comment hidden (noise)
Comment 10 QA Administrators 2024-01-24 03:12:52 UTC Comment hidden (noise)
Comment 11 Patrick (volunteer) 2024-07-13 16:31:05 UTC
I have submitted the following fix for this bug:

https://gerrit.libreoffice.org/c/core/+/170426

I copied the fix from NeoOffice so the NeoOffice licensing needs to be reviewed before I can commit the fix:

https://lists.freedesktop.org/archives/libreoffice/2024-July/092188.html

I will post again when I have any news to report.
Comment 12 Michael Weghorn 2024-07-15 10:08:29 UTC
Created attachment 195311 [details]
Screencast for discussion on https://gerrit.libreoffice.org/c/core/+/170426 (PS3)
Comment 13 Commit Notification 2024-07-25 14:20:23 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3c30273d72e1cb6ff6cc1d9afd464ab927e16459

tdf#67919 access toolbar button dropdown menu from macOS VoiceOver

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Patrick (volunteer) 2024-07-25 14:28:41 UTC
I have committed a fix this bug. The fix should be in tomorrow's (26 July 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master build installer does not overwrite any LibreOffice official versions. Instead, it will be installed as a separate application called "LibreOfficeDev" in the /Applications folder.

Because this is a "test" build, you will need to do the following steps before you launch the LibreOfficeDev application:

1. Go to the Finder and navigate to the /Applications/Utilities folder
2. Launch the "Terminal" application
3. Paste the following command in the Terminal application window and press the Return key to execute the command:

   xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app
Comment 15 Commit Notification 2024-07-25 15:35:38 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/fadfd6f5cda5f77dbe2190c89de15b1224135304

tdf#67919 access toolbar button dropdown menu from macOS VoiceOver

It will be available in 24.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.