tdf#67919 access toolbar button dropdown menu from macOS VoiceOver

The fix was copied from the following NeoOffice source code files which
are licensed under the Mozilla Public License, v. 2.0:

https://github.com/neooffice/NeoOffice/blob/NeoOffice-2022_7/accessibility/source/standard/vclxaccessibletoolboxitem.cxx
https://github.com/neooffice/NeoOffice/blob/NeoOffice-2022_7/include/vcl/toolbox.hxx
https://github.com/neooffice/NeoOffice/blob/NeoOffice-2022_7/vcl/source/window/toolbox.cxx

Change-Id: Ibd24c6df4ecd7fdac1c56763d1daec09936a9b31
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/170426
Reviewed-by: Patrick Luby <guibomacdev@gmail.com>
Tested-by: Jenkins
Reviewed-by: Michael Meeks <michael.meeks@collabora.com>
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>